# web-app-factory

./: .gitignore  BACKLOG.md  CONTRIBUTING.md  LICENSE  README.md  factory.py  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
agents/: definitions.py
config/: settings.py
contracts/: pipeline-contract.schema.json  pipeline-contract.web.v1.yaml
pipeline_runtime/: error_router.py  governance_monitor.py  startup_preflight.py
tests/: conftest.py  test_accessibility_gate.py  test_agent_definitions.py  test_auth_templates.py  test_backend_spec_gate.py  test_build_gate.py  test_contract_runner.py  test_contract_schema.py  test_deploy_agent_runner.py  test_deploy_providers.py  test_deployment_gate.py  test_dev_server.py  test_e2e_gate.py  test_env_checker.py  test_factory_cli.py  test_factory_mcp_bridge.py  test_gate_dispatch_backend_spec.py  test_governance_monitor.py  test_input_validator.py  test_interactive_gate_flow.py  test_keychain.py  test_legal_gate.py  test_lighthouse_gate.py  test_link_integrity_gate.py  test_mcp_approval_gate.py  test_mcp_entry_point.py  test_mcp_server_tool_names.py  test_mcp_tools.py  test_openai_mcp_server.py  test_passkey_templates.py  test_phase_1a_executor.py  test_phase_1b_executor.py  test_phase_2a_executor.py  test_phase_2b_executor.py  test_phase_3_executor.py  test_phase_3_supabase.py  test_phase_3_supabase_steps.py  test_phase_spec_agent.py  test_pipeline_bridge.py  test_pipeline_state.py  (+17 more)
tools/: contract_pipeline_runner.py  factory_mcp_server.py  pipeline_state.py  quality_self_assessment.py
tools/deploy_providers/: __init__.py  aws_provider.py  base.py  gcp_provider.py  local_provider.py  registry.py  (+1 more)
web_app_factory/: __init__.py  _dev_server.py  _env_checker.py  _input_validator.py  _keychain.py  _pipeline_bridge.py  _plan_generator.py  _progress_store.py  _status_formatter.py  _supabase_auth_renderer.py  _supabase_migration.py  _supabase_provisioner.py  _supabase_template_renderer.py  _tool_impls.py  mcp_server.py  openai_mcp_server.py
(+200 files in other folders)
