[project]
name = "web-app-factory"
version = "0.1.0"
description = "Automated web application development pipeline"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.50",
    "fastmcp>=3.1.0",
    "httpx>=0.28.0",
    "jsonschema>=4.20.0",
    "mcp>=1.26.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
