[project]
name = "web-app-factory"
version = "0.1.0"
description = "Automated web application development pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "web-app-factory contributors"}]
keywords = ["llm", "code-generation", "web", "nextjs", "claude", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "claude-agent-sdk>=0.1.50",
    "fastmcp>=3.1.0",
    "httpx>=0.28.0",
    "jsonschema>=4.20.0",
    "keyring>=25.0.0",
    "mcp>=1.26.0",
    "playwright>=1.50.0",
    "pyyaml>=6.0",
]

[project.scripts]
web-app-factory-mcp = "web_app_factory.mcp_server:main"
web-app-factory-mcp-http = "web_app_factory.openai_mcp_server:main"

[project.urls]
Homepage = "https://github.com/anthropics/web-app-factory"
Repository = "https://github.com/anthropics/web-app-factory"
Issues = "https://github.com/anthropics/web-app-factory/issues"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["web_app_factory"]

[tool.setuptools.packages.find]
include = ["web_app_factory*"]

[tool.ruff]
target-version = "py310"
line-length = 120
